fix to alignment of buttons in approval list

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2866,6 +2866,9 @@ a {
 		margin-right: 1rem;
 	}
 }
+.before-approve, .after-approve {
+	display: inline-block;
+}
 .post-tags {
 	.fa {
 		+ .fa {
